--- a/mystyles/influencer-gear.css
+++ b/mystyles/influencer-gear.css
@@ -8,8 +8,8 @@ body{
 
 /*Header Section*/
 header{
-    max-width: 75rem;
-    margin: 10px auto;
+    max-width: 1200px;
+    margin: 0px auto;
 }
 
 /*Header Nav Section*/
@@ -73,4 +73,24 @@ header nav img{
     position: absolute;
     top: 25px;
     right: 30px;
+}
+
+/*Main Section*/
+/*Market Logo Section*/
+.market-logo{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    max-width: 1200px;
+    height: 110px;
+    margin: 100px auto;
+    box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);  
+}
+
+/*Collection Section*/
+.product-container{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    max-width: 1440px;
+    margin: 100px auto;
 }
