--- a/mystyles/influencer-gear.css
+++ b/mystyles/influencer-gear.css
@@ -94,3 +94,71 @@ header nav img{
     max-width: 1440px;
     margin: 100px auto;
 }
+
+
+
+/*Featured Products Section*/
+.featured{
+    display: flex;
+    max-width: 1110px;
+    height: 270px;
+    margin: 100px auto;
+    align-items: center;
+    justify-content: space-between;
+}
+.featured h3{
+    font-size: 38px;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+.featured p{
+    width: 501px;
+}
+
+.btn-secondary{
+    color: #ffffff;
+    background: #E02C6D;
+    height: 44px;
+    width: 155px;
+    border: none;
+    cursor: pointer;
+}
+
+/*Footer Section*/
+footer{
+    text-align: center;
+    color: #ffffff;
+    background-color:#100c24;
+}
+.footer-content{
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+.footer-content h3{
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+.footer-content p{
+    margin-top: 5px;
+    margin-bottom: 5px;
+    font-family: Manrope;
+    font-size: 14px;
+    font-weight: bold;
+}
+.footer-icon img{
+    margin-top: 20px;
+    height: 25px;
+    width: 25px;
+    background-color: #aaaaaa;
+    padding: 7px;
+    border-radius: 20px;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+.icon{
+    color: #ffffff;
+    stroke: white;
+    fill: white;
+
+}
