--- a/mystyles/influencer-gear.css
+++ b/mystyles/influencer-gear.css
@@ -1,6 +1,6 @@
 /*Shared Styles*/
 body{
-    font-family: "Poppins", sans-serif;
+    font-family: "Poppins","Manrope","Inter", sans-serif;
     font-weight: normal;
     font-style: normal;
 }
@@ -88,12 +88,52 @@ header nav img{
 }
 
 /*Collection Section*/
+.collection{
+    max-width: 1047px;
+    margin: 50px auto;
+}
+.collection h1{
+    font-size: 28px;
+    font-weight: 600;
+    text-align: center;
+    margin-bottom: 50px;
+}
 .product-container{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    max-width: 1440px;
-    margin: 100px auto;
+    width: 329px;
+    gap: 20px;
+    
 }
+.product{
+    background-color: white;
+    padding: 15px;
+    border-radius: 10px;
+    box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06); 
+}
+.product img{
+    height: 256px;
+    width: 300px;
+}
+.product h2{
+    font-size: 28px;
+    font-weight: 600;
+}
+.product h3{
+    font-size: 24px;
+    font-weight: 400;
+}
+.product .description{
+    font-family: Inter;
+    font-size: 14px;
+    font-weight: bold;
+    color: #787885;
+    line-height: 143%;
+    letter-spacing: 1.8%;
+}
+
+
+
 
 
 
