--- a/mystyles/influencer-gear.css
+++ b/mystyles/influencer-gear.css
@@ -132,9 +132,16 @@ header nav img{
     letter-spacing: 1.8%;
 }
 
-
-
-
+.see-more{
+    margin-top: 50px;
+    text-align: end;
+    margin-right: 20px; 
+}
+.see-more a{
+    text-decoration: none;
+    color: #e44680;
+    font-weight: bold;
+}
 
 
 /*Featured Products Section*/
