--- a/mystyles/influencer-gear.css
+++ b/mystyles/influencer-gear.css
@@ -118,12 +118,25 @@ header nav img{
 .product h2{
     font-size: 28px;
     font-weight: 600;
+    margin-bottom: 10px;
 }
 .product h3{
     font-size: 24px;
     font-weight: 400;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+.rating{
+    margin-top: 5px;
+    margin-bottom: 0px;
+}
+.rating i{
+    height: 10.3px;
+    width: 11px;
+    padding-right: 10px;
 }
 .product .description{
+    margin-top: 5px;
     font-family: Inter;
     font-size: 14px;
     font-weight: bold;
